<resources>
    <string name="app_name">Deutsche Verben</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="indicativeMode">Indikativ</string>
    <string name="indicativePresent">Präsens</string>
    <string name="indicativePast">Präteritum</string>
    <string name="indicativePerfect">Perfekt</string>
    <string name="indicativePluPerfect">Plusquam.</string>
    <string name="indicativeFutureOne">Futur I</string>
    <string name="indicativeFutureTwo">Futur II</string>
    <string name="subjunctiveMode">Konjunktiv</string>
    <string name="subjunctiveOne">Konjunktiv I</string>
    <string name="subjunctiveTwo">Konjunktiv II</string>
    <string name="subjunctivePerfect">Konj. Perfekt</string>
    <string name="subjunctivePluPerfect">Konj. PQP.</string>
    <string name="subjunctiveFutureOne">Konj. Futur I</string>
    <string name="subjunctiveFutureTwo">Konj. Futur II</string>
    <string name="imperativeMode">Imperativ</string>
    <string name="infinitive_participle">Infinitiv/Partizip</string>
    <string name="infinitiveOne">Infinitiv I</string>
    <string name="infinitiveTwo">Infinitiv II</string>
    <string name="participleOne">Partizip I</string>
    <string name="participletwo">Partizip II</string>
    <string name="verb_speaker">hear_the_verb</string>
    <string name="title_activity_conjugation_tab">ConjugationTabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appName">Eloquence Verbconjugator</string>
    <string name="textSearchButton">Search</string>
    <string name="author">From Maximilian Kopp</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="logo">Logo</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="weak">Weak</string>
    <string name="strong">Strong</string>
    <string name="reflexive">Reflexive</string>
    <string name="separable">Separable</string>
    <string name="non_separable">Non Separable</string>
    <string name="all_verbs">All Verbs</string>
    <string name="strong_verbs_training">Strong Verbs Training</string>
    <string name="tenses">Tenses</string>
    <string name="modal_verbs">Modal Verbs</string>
    <string name="reflexive_verbs">Reflexive Verbs</string>
    <string name="separable_verbs">Separable Verbs</string>
    <string name="modes">Modes</string>
    <string name="active_passive_voice">Active/Passive Voice</string>
    <string name="games">Games</string>
    <string name="study">Study</string>
    <string name="info">Info</string>
    <string name="present">Präsens</string>
    <string name="past">Präteritum</string>
    <string name="perfect">Perfekt</string>
    <string name="pqp">PQP</string>
    <string name="future_i">Futur I</string>
    <string name="future_ii">Futur II</string>
    <string name="definition">Definition</string>
    <string name="verwendung">Verwendung</string>
    <string name="bildung">Bildung</string>
    <string name="imprint">Imprint/Impressum</string>
    <string name="privacy">Privacy</string>
    <string name="faq">Frequently asked questions</string>
    <string name="faq_item">FAQ</string>
    <string name="tmg_en">Information in Pursuance of § 5 TMG: \nMaximilian Kopp \nIsaac Fulda Alee 4b \n55124 \n+491747349384 \nMainz \nE-Mail: mail.eloquence@web.de \n</string>
    <string name="eu_en">Dispute Resolution The European Commission provides a platform for online dispute resolution (ODR): \nhttps:// ec.europa.eu/consumers/odr. \nYou will find my email address above in the Impressum. \nI am not willing or obliged to participate in dispute settlement proceedings in front of a Consumer Arbitration Board.</string>
    <string name="tmg_de">Angaben gemäß § 5 TMG: \nMaximilian Kopp \nIsaac Fulda Alee 4b \n55124 \n+491747349384 \nMainz \nE-Mail: mail.eloquence@web.de \n</string>
    <string name="eu_de">Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit: \nhttps://ec.europa.eu/consumers/odr. \nIch bin nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.</string>
    <string name="privacy_police">Privacy/Datenschutz</string>
    <string name="privacy_en">No personal data (e.g. name, address or e-mail address) is collected or stored by this app. Furthermore, it is guaranteed that the provider of this app does not take any initiative for commercial use and further processing. The provider is not liable for any further processing of data that is performed by Google-Play within the Google Terms Of Use.</string>
    <string name="privacy_de">Durch das Anwenden dieser App werden keine personenbezogenenen (z. B. Name, Anschrift oder E-Mail-Adresse) Daten erhoben oder gespeichert. Ferner wird garantiert, dass von seitens des Betreibers dieser App keine Initiative zur gewerblichen Nutzung und Weiterverarbeitung ausgeht. Der Betreiber haftet nicht für eine eventuelle Weiterverarbeitung von Daten, die im Rahmen der Google-Nutzungsbedingungen von Google-Play selbst durchgeführt werden.</string>
    <string name="faq_one">
        \nF: How many verbs are covered?
        \nA: More than 17000 verbs are covered and can be conjugated through all tenses. \n
    </string>
    <string name="faq_two">
        \nF: Can I use this app offline?
        \nA: Yes, no internet connection is necessary. All data is stored locally on your device. \n
    </string>
    <string name="faq_three">
        \nF: Does this app contain any kind of ads or commercials?
        \nA: This App is completey ad-free. \n
    </string>
    <string name="faq_four">
        \nF: Why can I not listen to conjugation output?
        \nA: The application uses the embedded text-to-speech engine on your device. Please make sure your have installed and enabled TTS (eg. Google-TTS or Samsung-TTS) on your device  \n
    </string>
    <string name="faq_five">
        \nF: Why are some German verbs missing?
        \nA: This app was made by only one person. Please excuse any inconvenience. The app is continuously updated in order to add missing verbs or fixing bugs \n
    </string>
    <string name="faq_six">
        \nF: How can I submit suggestions or point out errors?
        \nA: Just send me an e-mail to: \nmail.eloquence@web.de \n
    </string>
</resources>
