<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_tenses"
        android:icon="@drawable/ic_access_time_black_24dp"
        android:title="@string/tenses" />

    <item
        android:id="@+id/nav_modal_verbs"
        android:icon="@drawable/ic_pan_tool_black_24dp"
        android:title="@string/modal_verbs" />

    <item
        android:id="@+id/nav_reflexive_verbs"
        android:icon="@drawable/ic_remove_red_eye_black_24dp"
        android:title="@string/reflexive_verbs" />

    <item
        android:id="@+id/nav_separable_verbs"
        android:icon="@drawable/ic_content_cut_black_24dp"
        android:title="@string/separable_verbs" />

    <item
        android:id="@+id/nav_modes"
        android:icon="@drawable/ic_open_with_black_24dp"
        android:title="@string/modes" />

    <item
        android:id="@+id/nav_diathesis"
        android:icon="@drawable/ic_transfer_within_a_station_black_24dp"
        android:title="@string/active_passive_voice" />

</menu>