<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toTopOf="parent"
    tools:context=".ConjugationTabActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:tabTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_indicative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indicativeMode" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_subjunctive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subjunctiveMode" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_imperative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imperativeMode" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_infpart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infinitive_participle" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>