<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".conjugatorFragment.SubjunctiveFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/subjunctive_mode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/subjunctiveMode"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/speaker_subj_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorRow"
            android:drawableStart="@drawable/ic_hearing"
            android:text="@string/subjunctiveOne"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/subj_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/speaker_subj_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorRow"
            android:drawableStart="@drawable/ic_hearing"
            android:text="@string/subjunctiveTwo"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/subj_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/speaker_subj_perfect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorRow"
            android:drawableStart="@drawable/ic_hearing"
            android:text="@string/subjunctivePerfect"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/subj_perfect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/speaker_subj_pluperfect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorRow"
            android:drawableStart="@drawable/ic_hearing"
            android:text="@string/subjunctivePluPerfect"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/subj_pluperfect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/speaker_subj_future_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorRow"
            android:drawableStart="@drawable/ic_hearing"
            android:text="@string/subjunctiveFutureOne"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/subj_future_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_hearing"
            android:gravity="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/speaker_subj_future_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorRow"
            android:drawableStart="@drawable/ic_hearing"
            android:text="@string/subjunctiveFutureTwo"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/subj_future_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>

