<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".conjugatorFragment.IndicativeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/cb_favourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_to_favourites"
            app:buttonTint="@color/colorAccent" />

        <TextView
            android:id="@+id/speaker_participle_parts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorRow"
            android:drawableStart="@drawable/ic_hearing"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/participle_parts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/indicative_mode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/indicativeMode"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/speaker_ind_present"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorRow"
            android:drawableStart="@drawable/ic_hearing"
            android:gravity="center"
            android:text="@string/indicativePresent"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/ind_present"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/speaker_ind_past"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorRow"
            android:drawableStart="@drawable/ic_hearing"
            android:gravity="center"
            android:text="@string/indicativePast"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/ind_past"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/speaker_ind_perfect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorRow"
            android:drawableStart="@drawable/ic_hearing"
            android:gravity="center"
            android:text="@string/indicativePerfect"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/ind_perfect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/speaker_ind_pluperfect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorRow"
            android:drawableStart="@drawable/ic_hearing"
            android:text="@string/indicativePluPerfect"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/ind_pluperfect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/speaker_ind_future_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorRow"
            android:drawableStart="@drawable/ic_hearing"
            android:gravity="center"
            android:text="@string/indicativeFutureOne"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/ind_future_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/speaker_ind_future_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorRow"
            android:drawableStart="@drawable/ic_hearing"
            android:gravity="center"
            android:text="@string/indicativeFutureTwo"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/ind_future_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>