<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".conjugatorFragments.InfPartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/infpart_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/infinitive_participle"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/speaker_infinitive_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorRow"
            android:drawableStart="@drawable/ic_hearing"
            android:text="@string/infinitiveOne"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/infinitive_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_hearing"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/speaker_infinitive_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorRow"
            android:drawableStart="@drawable/ic_hearing"
            android:text="@string/infinitiveTwo"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/infinitive_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/speaker_participle_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorRow"
            android:drawableStart="@drawable/ic_hearing"
            android:text="@string/participleOne"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/participle_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_hearing"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/speaker_participle_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorRow"
            android:drawableStart="@drawable/ic_hearing"
            android:text="@string/participletwo"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/participle_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>
